gap fixed

--- a/index.css
+++ b/index.css
@@ -101,12 +101,10 @@ p{
 .greet, .nickname:not(#raf){
     visibility: hidden;
 } 
-.nickname{
-    margin:0 1rem 0 1rem;
-}
 .wrapper{
     display: flex;
     align-items: center;
+    gap: .75rem;
     height: 10rem;
     width: 50rem;
     padding: 0;
